# OFI-BGQ-BuildEnv

./: .gitignore  README  README.md  autogen.sh  bgq_stack  config.site  configure.ac  make_release.sh.in  public_release.sh.in
benchmarks/: .gitignore  simple_configure.in
mpi/: .gitignore  NOTES.alcf  NOTES.testsuite  monitor_mpich_testsuite.sh  run_mpich_testsuite.sh  simple_configure.in
ofi/: .gitignore  simple_configure.in
